Fixes size difference of meeple logo on smaller viewports

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ html, #root {
 }
 
 #page-logo img {
-  height: 50%;
+  height: 2rem;
 }
 
 #page-logo h1 {
